// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gfSPMz"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hlABRf"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV bGjAGA"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV hxApYG"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt eYFslL"
      size="small"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV gewBWm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hyuCXJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV gXGcJz"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hlABRf"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hlABRf"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV bGjAGA"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hlABRf"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV bGjAGA"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV hxApYG"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hlABRf"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV hxApYG"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV bGjAGA"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV bGjAGA"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV hxApYG"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV gewBWm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV gewBWm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hyuCXJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV gewBWm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hyuCXJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV gXGcJz"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV gewBWm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV gXGcJz"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hyuCXJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-iaOGTt gbZfhB"
    >
      <div
        className="sc-eirfIE jVkkJG"
      >
        <div
          className="sc-fvyVFy ecIOxh"
        >
          <button
            className="sc-ccJWcV hyuCXJ"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-iRaSfU kLGOhN"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-fvyVFy ecIOxh"
      >
        <button
          className="sc-ccJWcV gXGcJz"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-iRaSfU kLGOhN"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
